syntax = "proto3";

package base;

import "third_party/proto/gogoproto/gogo.proto";
import "third_party/proto/cosmos_proto/cosmos.proto";


option go_package = "modules/identities/internal/queries/identity";

message queryRequest {
  option (gogoproto.equal)            = false;
  option (cosmos_proto.implements_interface) = "QueryRequest";

  string identityID =1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types.ID", (gogoproto.nullable) = false] ;


}
