syntax="proto3";

package base;

import "third_party/proto/gogoproto/gogo.proto";
import "proto/comoshelpers/v1beta1/basereq.proto";

option go_package= "modules/identities/internal/transactions/nub";

message transactionRequest {
    option (gogoproto.goproto_getters) = false;
    option (gogoproto.goproto_stringer) = false;
    option (gogoproto.equal)            = false;
    
    BaseReq BaseReq =1;


}


